# threeDimFruitLiDAR

./: README.md
FAST_LIO/Log/: mat_pre.txt
FAST_LIO/config/: icuas.yaml  mid360.yaml
FAST_LIO/launch/: mapping_icuas.launch  mapping_mid360.launch  mapping_w614.launch
FAST_LIO/rviz_cfg/: loam_livox.rviz  w614_airoDetection.rviz
FAST_LIO/src/: laserMapping.cpp
airo_detection/: CMakeLists.txt  README.md  package.xml
airo_detection/launch/: airo_detection.launch
airo_detection/misc/: airo_gps2odom.py  airo_gps2traj.py  airo_traj_record.py
airo_detection/ooad_diagram/: icuas24_tsp_activity_diagram.pu
airo_detection/results/: evo_cmd.sh  gps_tum1.txt  kissicp_tum1.txt
airo_detection/rviz_cfg/: airo_fusion.rviz
airo_detection/scripts/: dbscan.py  threeDim_fruit_database.py  threeDim_fruit_generator.py  tracker_manager.py  transform_utils.py  yolo_detect.py
