<?xml version="1.0"?>
<package>
  <name>airo_detection</name>
  <version>0.0.0</version>
  <description>
    Example package to show simple python package
  </description>

  <maintainer email="docker_master@gmail.com">docker_master</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
